add: policies, tests, persistenceObjects